tui/src/snapshots/grid_platform_tui__render__tests__dashboard_render_snapshot_100x16.snap
---
source: tui/src/render.rs
expression: snapshot
---
 GRID PLATFORM  XAUUSDT testnet running  HEALTHY  Focus Execution Focus                             
 Dashboard   Grid   Market   Events   Help                                                          
                                                                                                    
┌ Execution Focus ─────────────────────────────────────┐┌ Risk + Alerts ───────────────────────────┐
│Pos  0.250 @ 2354.20   U  1.84   R  14.52             ││Level  Watch   Breaker  OFF               │
│Exchange  N/A   Pending  0   Health  HEALTHY          ││Notional  590/1500   Stop  4.0%           │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
┌ Exchange Orders ─────────────────────────────────────┐┌ Market + Health ─────────────────────────┐
│Current mode exposes strategy-order mirrors only.     ││Last  2361.48   Mark  2361.55             │
│Live exchange-order queries are not enabled.          │└──────────────────────────────────────────┘
└──────────────────────────────────────────────────────┘┌ Command Timeline ────────────────────────┐
┌ Recent Fills ────────────────────────────────────────┐│ FAILED  FLATTEN NOW                      │
│BUY 2349.10 x 0.050  pnl +2.51                        ││error: Exchange rejected flatten request d│
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 Focus Execution Focus | Tab panels | p/r run | c/f/s danger | Enter/Esc
