tui/src/snapshots/grid_platform_tui__render__tests__dashboard_render_snapshot_120x18.snap
---
source: src/render.rs
expression: snapshot
---
 GRID PLATFORM  XAUUSDT testnet running  HEALTHY  42ms / stale 0ms  Focus Execution Focus  Pending 0                    
 Dashboard   Grid   Market   Events   Help                                                                              
                                                                                                                        
                                                                                                                        
┌ Execution Focus ───────────────────────────────────────────────────────┐┌ Risk + Alerts ─────────────────────────────┐
│Position  0.250 @ 2354.20                                               ││Level  Watch   Breaker  OFF                 │
│U-PnL  1.84   R-PnL  14.52                                              ││Notional  590/1500   Stop  4.0%             │
└────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────┘
┌ Open Orders ───────────────────────────────────────────────────────────┐┌ Market + Health ───────────────────────────┐
│Side   Price     Qty      Status                                        ││Last  2361.48   Mark  2361.55               │
│BUY    2352.80   0.100    NEW                                           ││HTTP  UP   WS  UP                           │
└────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────┘
┌ Recent Fills ──────────────────────────────────────────────────────────┐┌ Command Timeline ──────────────────────────┐
│BUY 2349.10 x 0.050  pnl +2.51                                          ││ ACK  PAUSE                                 │
│                                                                        ││ FAILED  FLATTEN NOW                        │
└────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Focus Execution Focus | 1-4 pages ? help | Tab/Shift-Tab panels | p/r runtime | c/f/s danger ops | Enter/Esc modal
