tui/src/snapshots/grid_platform_tui__render__tests__dashboard_render_snapshot_waiting_first_snapshot_100x16.snap
---
source: tui/src/render.rs
expression: snapshot
---
 GRID PLATFORM  WAITING SNAPSHOT  Waiting for first snapshot                                        
 Dashboard   Grid   Market   Events   Help                                                          
                                                                                                    
┌ Execution Focus ─────────────────────────────────────┐┌ Risk + Alerts ───────────────────────────┐
│Initial snapshot pending                              ││Initial snapshot pending                  │
│Waiting for /runtime/snapshot before showing live     ││Waiting for /runtime/snapshot before      │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
┌ Open Orders ─────────────────────────────────────────┐┌ Market + Health ─────────────────────────┐
│Initial snapshot pending                              ││Initial snapshot pending                  │
│Waiting for /runtime/snapshot before showing live     ││Waiting for /runtime/snapshot before      │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
┌ Recent Fills ────────────────────────────────────────┐┌ Command Timeline ────────────────────────┐
│Initial snapshot pending                              ││Initial snapshot pending                  │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 Snapshot pending | p/r/c/f/s disabled | 1-4 pages ? help
