tui/src/snapshots/grid_platform_tui__render__tests__dashboard_render_snapshot_waiting_first_snapshot_zh_cn_100x16.snap
---
source: tui/src/render.rs
assertion_line: 2554
expression: snapshot
---
 GRID PLATFORM  等 待 快 照   等 待 首 个 快 照                                                               
 概 览    网 格    行 情    事 件    帮 助                                                                    
                                                                                                    
┌ 执 行 概 览  ────────────────────────────────────────────┐┌ 风 险 与 告 警  ──────────────────────────────┐
│首 个 快 照 未 就 绪                                         ││首 个 快 照 未 就 绪                             │
│等 待  /instances 与                                     ││等 待  /instances 与                         │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
┌ 挂 单 概 览  ────────────────────────────────────────────┐┌ 行 情 与 健 康  ──────────────────────────────┐
│首 个 快 照 未 就 绪                                         ││首 个 快 照 未 就 绪                             │
│等 待  /instances 与                                     ││等 待  /instances 与                         │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
┌ 最 近 成 交  ────────────────────────────────────────────┐┌ 命 令 时 间 线  ──────────────────────────────┐
│首 个 快 照 未 就 绪                                         ││首 个 快 照 未 就 绪                             │
└──────────────────────────────────────────────────────┘└──────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 等 待 快 照  | p/r/c/f/s 不 可 用  | 1-4 切 页  ? 帮 助
