tui/src/snapshots/grid_platform_tui__render__tests__dashboard_render_snapshot_zh_cn_80x24.snap
---
source: tui/src/render.rs
expression: snapshot
---
 GRID PLATFORM  XAUUSDT testnet running  健 康   焦 点  执 行 概 览                     
────────────────────────────────────────────────────────────────────────────────
 概 览    网 格    行 情    事 件    帮 助                                                
                                                                                
                                                                                
┌ 执 行 概 览  ─────────────────────────────────┐┌ 风 险 与 告 警  ─────────────────────┐
│仓 位   0.250 @ 2354.20                      ││级 别   观 察    熔 断   关             │
│浮 盈 亏   1.84   已 实 现   14.52               ││名 义 仓 位   590/1500   止 损   4.0%  │
│交 易 所   无    待 处 理   0   健 康   健 康         ││告 警   MARGIN_USAGE_WATCH         │
└───────────────────────────────────────────┘└─────────────────────────────────┘
┌ 交 易 所 挂 单  ───────────────────────────────┐┌ 行 情 与 健 康  ─────────────────────┐
│当 前 模 式 只 暴 露 策 略 订 单 镜 像 。                ││最 新   2361.48   标 记   2361.55    │
│尚 未 启 用 实 时 交 易 所 挂 单 查 询 。                ││服 务  WS  在 线    行 情  WS  在 线     │
│可 切 到 网 格 页 查 看 策 略 订 单 。                  ││健 康   健 康    滞 后  0ms            │
│                                           │└─────────────────────────────────┘
└───────────────────────────────────────────┘┌ 命 令 时 间 线  ─────────────────────┐
┌ 最 近 成 交  ─────────────────────────────────┐│ 已 确 认   暂 停   · 已 完 成           │
│BUY 2349.10 x 0.050  盈 亏  +2.51            ││                                 │
│                                           ││                                 │
│                                           ││                                 │
│                                           ││                                 │
└───────────────────────────────────────────┘└─────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 焦 点  执 行 概 览  | Tab 切 面 板  | p/r 运 行  | c/f/s 高 风 险  | Enter/Esc
