tui/src/snapshots/grid_platform_tui__render__tests__events_render_snapshot_100x16.snap
---
source: tui/src/render.rs
expression: snapshot
---
 GRID PLATFORM  XAUUSDT testnet running  HEALTHY  Focus Fills                                       
 Dashboard   Grid   Market   Events   Help                                                          
                                                                                                    
┌ Fills (1) ─────────────────────────────────────┐┌ Alerts (1) ────────────────────────────────────┐
│BUY 2349.10 x 0.050                             ││MARGIN_USAGE_WATCH Margin usage reached 39% of c│
│                                                ││Review the risk configuration before resuming.  │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌ Commands (2) ──────────────────────────────────┐┌ System (2) · pending 0 ────────────────────────┐
│ ACK  PAUSE                                     ││[info] WebSocket connected and streaming.       │
│ FAILED  FLATTEN NOW                            ││[info] Initial runtime snapshot loaded.         │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 Focus Fills | Tab panels | p/r run | c/f/s danger | Enter/Esc
